# django-book-catalogue

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
book_catalogue/: asgi.py  settings.py  urls.py  wsgi.py
books/: admin.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: author_confirm_delete.html  author_detail.html  author_form.html  author_list.html  base.html  book_confirm_delete.html  book_detail.html  book_form.html  book_list.html  home.html
books/tests/: conftest.py  test_forms.py  test_models.py  test_urls.py  test_views.py
