[project]
name = "django-book-catalogue"
version = "0.1.0"
description = ""
authors = [
    {name = "Aminul Chowdhury",email = "aminul.babor@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (==5.0.6)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
